--- a/_guides/timeseries-guide.adoc
+++ b/_guides/timeseries-guide.adoc
@@ -94,7 +94,7 @@ engine:
     - controllerService: kafka_service
       component: com.hurence.logisland.stream.spark.structured.provider.KafkaStructuredStreamProviderService
       configuration:
-        kafka.input.topics: logisland_measures
+        kafka.input.topics: logisland_raw
         kafka.output.topics: logisland_measures
         kafka.error.topics: logisland_errors
         kafka.input.topics.serializer: com.hurence.logisland.serializer.JsonSerializer
@@ -106,6 +106,31 @@ engine:
         kafka.topic.default.partitions: 4
         kafka.topic.default.replicationFactor: 1
 
+    - controllerService: kafka_service_out
+      component: com.hurence.logisland.stream.spark.structured.provider.KafkaStructuredStreamProviderService
+      configuration:
+        kafka.input.topics: logisland_measures
+        kafka.output.topics: logisland_metrics
+        kafka.error.topics: logisland_errors
+        kafka.input.topics.serializer: com.hurence.logisland.serializer.JsonSerializer
+        kafka.output.topics.serializer: com.hurence.logisland.serializer.JsonSerializer
+        kafka.error.topics.serializer: com.hurence.logisland.serializer.JsonSerializer
+        kafka.metadata.broker.list: kafka:9092
+        kafka.zookeeper.quorum: zookeeper:2181
+        kafka.topic.autoCreate: true
+        kafka.topic.default.partitions: 4
+        kafka.topic.default.replicationFactor: 1        
+
+    - controllerService: datastore_service
+      component: com.hurence.logisland.service.solr.Solr8ClientService
+      configuration:
+        solr.cloud: false
+        solr.connection.string: http://solr1:8983/solr
+        solr.collection: historian
+        solr.concurrent.requests: 4
+        flush.interval: 1000
+        batch.size: 200
+
   streamConfigurations:
 
     # This stream take all raw events as lines comming from local files
@@ -114,7 +139,7 @@ engine:
       component: com.hurence.logisland.stream.spark.structured.StructuredStream
       configuration:
         read.topics.serializer: none
-        read.stream.service.provider: file_service
+        read.stream.service.provider: kafka_service
         write.topics.serializer: com.hurence.logisland.serializer.JsonSerializer
         write.stream.service.provider: kafka_service
       processorConfigurations:
@@ -144,10 +169,12 @@ engine:
       configuration:
         read.topics.key.serializer: com.hurence.logisland.serializer.StringSerializer
         read.topics.serializer: com.hurence.logisland.serializer.JsonSerializer
-        read.stream.service.provider: kafka_service
+        read.stream.service.provider: kafka_service_out
         write.topics.serializer: com.hurence.logisland.serializer.JsonSerializer
-        write.stream.service.provider: console_service
+        write.stream.service.provider: kafka_service_out
         groupby: tagname
+        chunk.size: 50
+        state.timeout.ms: 30000
 
       processorConfigurations:
 
@@ -156,13 +183,18 @@ engine:
           component: com.hurence.logisland.processor.ConvertToTimeseries
           configuration:
             groupby: tagname
-            metric: max;min;avg;count;trend;scale:0.5;sax:5,0.01,6
+            metric: max;min;avg;count;trend;sax:7,0.01,10
+
+        # all the parsed records are added to solr by bulk
+        - processor: solr_publisher
+          component: com.hurence.logisland.processor.datastore.BulkPut
+          configuration:
+            datastore.client.service: datastore_service
 ----
 
 == some data to process
 
-The folder `data/timeseries` contins some files that will be parsed with the following pattern `timestamp;tagname;value;quality`
-
+The loggen container send some raw valiue into logisland_raw topic
 
 If you want to see what is flowing into `logisland_raw` topic, just run the following :
 
@@ -273,10 +305,11 @@ get all chunks containing becd sax string
 `curl -XGET http://localhost:8983/solr/historian/select?q=chunk_sax:becd` 
 
 
+== Cleanup
 
 to remove all containers run the following
 
-    `docker-compose -f docker-compose.yml -f docker-compose.historian.yml down` 
+`docker-compose -f docker-compose.yml -f docker-compose.historian.yml down` 
 
 // todo 
 * add DDC threshold param to record converter
