--- a/_guides/timeseries-guide.adoc
+++ b/_guides/timeseries-guide.adoc
@@ -37,32 +37,21 @@ To complete this guide, you need:
 
 == Solution
 
-We recommend that you follow the instructions in the next sections and create your own application step by step.
-However, you can go right to the completed example.
-
 Clone the Git repository: `git clone {quickstarts-clone-url}`, or download an {quickstarts-archive-url}[archive].
 
-The solution is located in the `conf/timeseries/parse-timeseries-structured.yml` file.
-
-This guide assumes you already have the completed application from the `getting-started` directory.
+The logisland job is located in the `conf/timeseries/parse-timeseries-structured.yml` file.
 
 
 == Environment setup
 
-Start Zookeeper, Kafka, Logisland container with the following command `sudo docker-compose -f docker-compose.yml -f docker-compose.historian.yml up -d`
-
-
-
+Start all the the services with the following command `sudo docker-compose -f docker-compose.yml -f docker-compose.historian.yml up -d`
 
 
 == Setup Logisland Job
 
-If you want to run directly the solution juste issu the following command within {quickstarts-clone-url} folder
+Run directly the solution wioth the following command within the {quickstarts-clone-url} root folder.
 
 `sudo docker exec -ti logisland-quickstarts_logisland_1 ./bin/logisland.sh --conf conf/timeseries/timeseries-parsing-structured.yml`
-
-otherwise open an editor 
-
 
 == the timeseries app
 here is the logisland job for timeseries parsing, chunking and indexing
@@ -194,7 +183,7 @@ engine:
 
 == some data to process
 
-The loggen container send some raw valiue into logisland_raw topic
+The loggen container send some raw values into logisland_raw topic
 
 If you want to see what is flowing into `logisland_raw` topic, just run the following :
 
@@ -230,6 +219,9 @@ you should see some random metrics
 
 == Points
 
+
+If you want to see what is flowing into `logisland_measures` topic, just run the following :
+
 `sudo docker exec -ti logisland-quickstarts_kafka_1 /opt/kafka/bin/kafka-console-consumer.sh --bootstrap-server kafka:9092 --topic logisland_measures`
 
 
@@ -260,7 +252,7 @@ Each points is first parsed as
 `sudo docker exec -ti logisland-quickstarts_kafka_1 /opt/kafka/bin/kafka-console-consumer.sh --bootstrap-server kafka:9092 --topic logisland_metrics` 
 
 
-you should see somethins like this in your logisland logs
+you should see something like this in your logisland logs
 
 [source,json,subs=attributes+]
 ----
